# pycligpt

./: LICENSE  README.md  pyproject.toml  requirement.txt
pycligpt/: chat_gpt.py  color.py  main.py  prompt.py  settings.py
src/: chat_gpt.py  main.py
src/pycligpt/: main.py  settings.py
